--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=georgia-express
-spring.datasource.url=jdbc:postgresql://localhost:5432/georgiaexpress
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=test1234
 spring.jpa.hibernate.ddl-auto=validate
